# template-conan-poetry

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists.txt.mako  README.md  conanfile.txt  poetry.lock.rename  pyproject.toml  pyproject.toml.rename  pyproject.toml.rename.mako  rh-template.py
.rh-project/: clean-conan-artefacts.sh  cmake.sh  conf.sh  init.el.mako
.rh-project.rename/: bootstrap.sh  build.sh  clean-git.sh  cmake.sh  conan-install.sh  conf.sh.mako  init.el  init.el.mako  lint-clang-check.sh  lint-clang-tidy.sh  poetry-install.sh  project-name.rename.mako  project-name.rename.py  run-main-test.sh  run-perf.sh  run-test.sh  run.sh  setup.el  setup.el.mako
rh-template/: conf.py  expand.py  implode.py
rh_template/: __init__.py  config.py  expand.py  implode.py  utils.py
src/: main.c  main.cpp  main.hpp  main.perf.cpp  main.test.cpp.mako
utils/conan2/profiles/: clang-11  clang-12  clang-15  clang-16  clang-17  gcc-17
